--- a/public_html/main.css
+++ b/public_html/main.css
@@ -14,35 +14,23 @@ strong {
     display: block;
     position: relative;
     top: 5px;
-    right: 38px;
+    right: 20px;
 }
 
-.location
+li.location
 {
 	font-size: 25px;
 	font-weight: bold;
+	display: block;
+    position: relative;
+    top: 17px;
+    right: 38px;
+    padding: 0 !important;
+    margin: 0 !important;
+    display: none;
+    color: #fff;
 }
 
-#user-noamsml {
-  display: block;
-}
-
-#new_user input {
-  border: 4px solid #99FF00;
-  background: black;
-  color: white;
-  padding: 20px;
-  margin: 10px auto;
-  font-size: 200%;
-}
-
-#new_user input[type="text"] {
-  width: 65%;
-}
-#new_user input[type="submit"]:active {
-  background: #99ff00;
-  color: #000;
-}
 
 #usernames {
   list-style-type: none; 
