--- a/public_html/main.css
+++ b/public_html/main.css
@@ -11,10 +11,11 @@ strong {
 /*    position: relative;
     top: -20px;*/
     font-size: 14px;
-    display: block;
-    position: relative;
-    top: 5px;
-    right: 20px;
+}
+
+.singleton {
+padding-left: 5px;
+padding-right: 5px;
 }
 
 li.location
@@ -27,16 +28,19 @@ li.location
     right: 38px;
     padding: 0 !important;
     margin: 0 !important;
-    display: none;
     color: #fff;
 }
 
+.hidden { display: none; }
 
-#usernames {
+
+#locations, .users {
   list-style-type: none; 
 }
 
-#usernames li {
+#locations li {
+
+display:block;
   
 }
 
@@ -49,7 +53,6 @@ li.location
 }
 
 .username {
-  display: none;
   font-size: 40px;
   color: #FF0099;
   text-decoration: none;
